<resources>
    <string name="app_name">EldarWallet</string>
    <string name="balance">Saldo</string>
    <string name="n_cuenta">N°Cuenta</string>
    <string name="cards">Tarjetas</string>
    <string name="add_card">Agregar tarjeta</string>
    <string name="card_register">Registrar Tarjeta</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="card_number">Nº Tarjeta</string>
    <string name="expiration_date">Expiracion</string>
    <string name="cvv">CVV</string>
    <string name="company_bank">Compañia/Banco</string>
    <string name="register">Registrar</string>
    <string name="successful_card_registration">Se logro registrar la tarjeta con exito!</string>
    <string name="failed_card_registration">Operacion Fallida: Los datos de la tarjeta no coincides con los del usuario</string>
    <string name="on_empty_fields">Por favor complete todos los campos</string>
    <string name="enter">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="invalid_login">Usuario y/o contraseña invalidas</string>
    <string name="complete_empty_fields">Por favor complete todos los campos</string>
    <string name="generate_qr_code_with">Codigo Qr Generado con:</string>
    <string name="generate_qr_code">Generar codigo QR</string>
    <string name="make_nfc_payment">Realizar pago NFC</string>
    <string name="select_card_pay">Seleccione tarjeta para pagar:</string>
    <string name="amount">$ 0</string>
    <string name="pay">Pagar</string>
    <string name="payment_successful">Se realizo el pago con exito</string>
    <string name="payment_failure">No se pudo realizar el pago</string>
    <string name="please_enter_amount_to_pay">Por favor introduzca el monto a pagar</string>
</resources>